--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>homepage</title>
 </head>
 <body>
-  <a href="experiment1.html">焰色反應</a><br>
-  <a href="perform.html">粒子擴散</a><br>
-  <a href="concentration.html">濃度</a><br>
+  <h1>
+    <a href="project/experiment1.html">焰色反應</a><br>
+    <a href="project/perform.html">粒子擴散</a><br>
+    <a href="project/concentration.html">濃度</a><br>
+  </h1>
 </body>
 </html>
