--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   <h1>VirtualLab 虛擬化學實驗室</h1>
   
   <div class="button-container">
-    <button class="button" onclick="window.location.href='experiment1.html'">焰色反應</button>
-    <button class="button" onclick="window.location.href='experiment2.html'">氣體擴散模擬器</button>
-    <button class="button" onclick="window.location.href='experiment3.html'">溶液濃度</button>
+    <button class="button" onclick="window.location.href='project/experiment1.html'">焰色反應</button>
+    <button class="button" onclick="window.location.href='project/experiment2.html'">氣體擴散模擬器</button>
+    <button class="button" onclick="window.location.href='project/experiment3.html'">溶液濃度</button>
   </div>
 
 </body>
