--- a/wfshdec-test-io/resources.html
+++ b/wfshdec-test-io/resources.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <!-- Navbar -->
+   <container>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">實驗班網站</a>
@@ -27,7 +28,7 @@
       </div>
     </div>
   </nav>
-
+</container>
   <!-- Hero -->
   <section class="hero" style="background: url('data/file/banner.png') center/cover no-repeat;">
     <h1>相關資源</h1>
