--- a/wfshdec-test-io/index.html
+++ b/wfshdec-test-io/index.html
@@ -30,7 +30,7 @@
   </nav>
 </container>
   <!-- Hero Section -->
-  <section class="hero" style="background: url('/data/files/banner\(1920x550\).png') center/cover no-repeat;">
+  <section class="hero" style="background: url('/data/files/banner.png') center/cover no-repeat;">
     <h1>數位學習實驗班<br>DEC</h1>
   </section>
 
