--- a/wfshdec-test-io/admissions.html
+++ b/wfshdec-test-io/admissions.html
@@ -30,7 +30,7 @@
   </nav>
 </container>
   <!-- Hero -->
-  <section class="hero" style="background: url('data/file/banner.png') center/cover no-repeat;">
+  <section class="hero" style="background: url('data/files/banner.png') center/cover no-repeat;">
     <h1>招生資訊</h1>
   </section>
 
