--- a/project/index.html
+++ b/project/index.html
@@ -58,9 +58,9 @@
   <h1>VirtualLab 虛擬化學實驗室</h1>
   
   <div class="button-container">
-    <button class="button" onclick="window.location.href='project/concentration.html'">溶液濃度</button>
-    <button class="button" onclick="window.location.href='project/experiment1.html'">焰色反應</button>
-    <button class="button" onclick="window.location.href='project/perform.html'">氣體擴散</button>
+    <button class="button" onclick="window.location.href='concentration.html'">溶液濃度</button>
+    <button class="button" onclick="window.location.href='experiment1.html'">焰色反應</button>
+    <button class="button" onclick="window.location.href='perform.html'">氣體擴散</button>
   </div>
 
 </body>
