--- a/wfshdec-test/campus.html
+++ b/wfshdec-test/campus.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navbar -->
    <container>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">實驗班網站</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -57,8 +57,10 @@
     </div>
   </div>
 
-  <footer class="text-center">
-    © 萬芳高中數位學習實驗班
+  <footer>
+    <div class="text-center">© 萬芳高中數位學習實驗班</div><br><hr>
+    <div class="text-center" style="text-size= 0.5em;"><b>Creat By</b><br>林聖偉&nbsp&nbsp&nbsp鄭程翔
+      </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
