--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -58,6 +58,9 @@
     <div class="inner-box">
       <div id="competitions"></div>
       <div id="admissions"></div>
+    </div>
+    <h2>校友</h2>
+    <div class="inner-box">
       <div id="alumni"></div>
     </div>
   </section>
