--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -59,20 +59,23 @@
       <div id="competitions"></div>
       <div id="admissions"></div>
     </div>
+  </section>
+
+  <!-- Events Section -->
+  <section class="section-light">
     <h2>校友</h2>
     <div class="inner-box">
       <div id="alumni"></div>
     </div>
   </section>
 
-  <!-- Events Section -->
-  <section class="section-light">
+  <section class="section-colored">
     <h2>活動剪影</h2>
     <div class="container">
       <div id="events-list"></div>
     </div>
   </section>
-
+  
   <!-- Footer -->
   <footer>
     <div class="text-center">© 萬芳高中數位學習實驗班</div><br><hr>
