--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -70,7 +70,7 @@
   </section>
 
   <section class="section-colored">
-    <h2>校友</h2>
+    <h2>傑出校友</h2>
     <div class="inner-box">
       <div id="alumni"></div>
     </div>
