--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -57,7 +57,7 @@
     <h2>競賽與成果</h2>
     <div class="inner-box">
       <div id="competitions"></div>
-      <div id="admissions"></div>
+     
     </div>
   </section>
 
@@ -70,8 +70,15 @@
   </section>
 
   <section class="section-colored">
-    <h2>傑出校友</h2>
+    <h2>升學成果</h2>
     <div class="inner-box">
+      <div id="admissions"></div>
+    </div>
+  </section>
+
+  <section class="section-light">
+    <h2>傑出校友</h2>
+    <div class="container">
       <div id="alumni"></div>
     </div>
   </section>
