--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -54,7 +54,7 @@
 
   <!-- Achievements Section -->
   <section class="section-colored">
-    <h2>競賽與成果</h2>
+    <h2>競賽與發表</h2>
     <div class="inner-box">
       <div id="competitions"></div>
      
