--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -16,7 +16,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse bg-light" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">首頁</a></li>
           <li class="nav-item"><a class="nav-link" href="courses.html">課程特色</a></li>
