--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navbar -->
 <container>
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><b>實驗班網站</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -88,8 +88,9 @@
     <div class="text-center" style="text-size= 0.5em;"><b>Creat By</b><br>林聖偉&nbsp&nbsp&nbsp鄭程翔
       </div>
   </footer>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
