--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -9,26 +9,33 @@
 </head>
 <body>
   <!-- Navbar -->
-<container>
-  <nav class="navbar navbar-expand-lg" id="navbar">
+
+<nav class="navbar navbar-expand-lg" id="navbar">
+  <div class="container">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><b>實驗班網站</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
-          <li class="nav-item"><a class="nav-link" href="courses.html">課程特色</a></li>
-          <li class="nav-item"><a class="nav-link" href="achievements.html">學生成就</a></li>
-          <li class="nav-item"><a class="nav-link" href="admissions.html">招生資訊</a></li>
-          <li class="nav-item"><a class="nav-link" href="campus.html">校園生活</a></li>
-          <li class="nav-item"><a class="nav-link" href="resources.html">相關資源</a></li>
-        </ul>
-      </div>
     </div>
-  </nav>
-</container>
+  <div class="down-nav">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
+        <li class="nav-item"><a class="nav-link" href="courses.html">課程特色</a></li>
+        <li class="nav-item"><a class="nav-link" href="achievements.html">學生成就</a></li>
+        <li class="nav-item"><a class="nav-link" href="admissions.html">招生資訊</a></li>
+        <li class="nav-item"><a class="nav-link" href="campus.html">校園生活</a></li>
+        <li class="nav-item"><a class="nav-link" href="resources.html">相關資源</a></li>
+      </ul>
+    </div>
+  </div>
+  </div>
+</nav>
+      
+ 
+ 
+
   <!-- Hero Section -->
   <section class="hero" style="background: url('data/files/banner.png') center/cover no-repeat;">
     <h1>數位學習實驗班<br>DEC</h1>
