--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>萬芳高中數位實驗班</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><b>實驗班網站</b></a>
+        <a class="navbar-brand" href="index.html"><strong>實驗班網站</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
