--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -85,6 +85,8 @@
   </div>
 </section>
 
+<button class="btn btn-lg retop" onclick="window.scrollTo(0, 0);"><i class="bi bi-arrow-bar-up"></i></button>
+
 <!-- Footer -->
 <footer>
   <div class="text-center">© 萬芳高中數位學習實驗班</div><br><hr>
