--- a/wfshdec-test/resources.html
+++ b/wfshdec-test/resources.html
@@ -30,7 +30,7 @@
   </nav>
 </container>
   <!-- Hero -->
-  <section class="hero" style="background: url('data/files/banner.png') center/cover no-repeat;">
+  <section class="hero" style="background: url('data/files/banner.webp') center/cover no-repeat;">
     <h1>相關資源</h1>
   </section>
 
