--- a/wfshdec-test/index.html
+++ b/wfshdec-test/index.html
@@ -33,7 +33,7 @@
   </nav>
 
 <!-- Hero Section -->
-<section class="hero" style="background: url('data/files/banner.png') center/cover no-repeat;">
+<section class="hero" style="background: url('data/files/banner.webp') center/cover no-repeat;">
   <h1>數位學習實驗班<br>DEC</h1>
 </section>
 
